--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@ runtime: nodejs18
 instance_class: F2
 
 env_variables:
-  DATABASE_URL: "postgres://postgres:*6ZpgAj69pt3*te54qwebn678768fghfghO@34.30.175.87:5432/uat"
+  DATABASE_URL: "postgres://postgres:*6ZpgAj69pt3*te54qwebn678768fghfghO@34.30.175.87:5432/postgres"
   VERSION: "0.0.1"
   NODE_ENV: "uat"
   TOKEN_SECRET: "D6lr466vbF#2tJks6jcW"
